# async_chat

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  connection.py  main.py  redis.py  schemas.py  wait_for_redis.py
app/routers/: chat.py  users.py
app/scripts/: entrypoint.sh
app/templates/: chat.html  home.html
tests/: conftest.py  test_redis.py  test_routers.py
